[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowcvcli"
dynamic = ["version"]
description = "Control a FlowCV resume from the command line or Python — content, design, templates, photo, publish and PDF export — via FlowCV's private JSON API. Zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "dannyota" }]
keywords = ["flowcv", "resume", "cv", "cli", "resume-builder", "json-api", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
flowcv = "flowcvcli.cli:main"

[project.urls]
Homepage = "https://github.com/dannyota/flowcvcli"
Repository = "https://github.com/dannyota/flowcvcli"
Documentation = "https://github.com/dannyota/flowcvcli/blob/main/docs/API.md"
Issues = "https://github.com/dannyota/flowcvcli/issues"

[tool.setuptools]
packages = ["flowcvcli"]

[tool.setuptools.dynamic]
version = { attr = "flowcvcli.__version__" }
